--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2669,6 +2669,22 @@ input, select, textarea {
 					padding-top: 0;
 				}
 
+
+				ul.circle {
+					list-style-type: circle;
+				  }
+				  
+				  ul.square {
+					list-style-type: square;
+				  }
+				  
+				  ol.c {
+					list-style-type: upper-roman;
+				  }
+				  
+				  ol.d {
+					list-style-type: lower-alpha;
+				  }
 	dl {
 		margin: 0 0 2em 0;
 	}
@@ -3544,6 +3560,17 @@ input, select, textarea {
 	}
 
 /* Sidebar */
+
+
+
+
+
+
+
+
+
+
+	/* Sidebar */
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
